--- a/NIDebugger/NIDebugger.csproj
+++ b/NIDebugger/NIDebugger.csproj
@@ -42,6 +42,7 @@
     <Compile Include="LDASM.cs" />
     <Compile Include="NIDebugger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScyllaIAT.cs" />
     <Compile Include="Win32.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
