--- a/NIDebugger/NIDebugger.csproj
+++ b/NIDebugger/NIDebugger.csproj
@@ -39,10 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ARImpRec.cs" />
     <Compile Include="LDASM.cs" />
     <Compile Include="NIDebugger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScyllaIAT.cs" />
     <Compile Include="Win32.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
